bazel_dep(name = "abseil-cpp", version = "20230802.0", repo_name = "com_google_absl")
bazel_dep(name = "abseil-py", version = "1.4.0", repo_name = "com_google_absl_py")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "pybind11_bazel", version = "2.11.1")
bazel_dep(name = "protobuf", version = "23.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_go", version = "0.42.0")
bazel_dep(name = "rules_python", version = "0.27.1")

python_configure = use_extension("@pybind11_bazel//:python_configure.bzl", "extension")
use_repo(python_configure, "local_config_python", "pybind11")
